<resources>
    <string name="app_name">WeatherApp</string>
    <string name="settings">Settings</string>
    <string name="warning_no_fine_location_permission">Location based broadcast can\'t function without location permission.</string>
    <string name="change_settings">Change</string>
    <string name="warning_change_location_settings">Turn on location settings.</string>
    <string name="error_message">Something\nwent wrong\nat our end!</string>
    <string name="retry">RETRY</string>

    <!--   fonts -->
    <string name="font_regular">Roboto-Regular.ttf</string>
    <string name="font_black">Roboto-Black.ttf</string>
    <string name="font_thin">Roboto-Thin.ttf</string>


</resources>
